# monix

./: .coverage  .gitignore  Dockerfile.sandbox  README.md  TESTING.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  rules.md  test_performance.py  vercel.json
.github/workflows/: ci.yml  test.yml
api/: __init__.py  server.py
cli/: __init__.py  main.py  ui.py
cli/commands/: __init__.py  alerts.py  connections.py  monitor.py  scan.py  status.py  traffic.py  watch.py  web.py
cli/core/: __init__.py  analyzer.py  collector.py  scanner.py
cli/utils/: __init__.py  display.py  geo.py
core/: monitor.py  state.py  traffic.py
core/scanners/: web.py
dashboard/: ui.py
engine/: __init__.py
engine/analyzers/: __init__.py  threat.py  traffic.py
engine/collectors/: __init__.py  connection.py  system.py
engine/monitoring/: __init__.py  engine.py  state.py
engine/scanners/: __init__.py  security.py  web.py
tests/: README.md  __init__.py  conftest.py  test_analyzers_threat.py  test_analyzers_traffic.py  test_api_server.py  test_collectors_system.py  test_scanners_web.py
tests/api/: test_server.py
tests/cli/: test_main.py
tests/core/: test_system.py  test_traffic.py
tests/utils/: test_geo.py  test_utils.py
web/: .editorconfig  .eslintrc.json  .gitignore  README.md  knip.json  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/docs/: page.tsx
web/src/app/web/: page.tsx
web/src/components/: Navigation.tsx  UrlAnalyzer.tsx
web/src/components/ui/: badge.tsx  map.tsx  progress.tsx
web/src/lib/: api.ts  utils.ts
