[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monix"
version = "1.0.0"
description = "Next-Gen Intrusion Monitoring & Defense for Linux Servers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Monix Team"}
]
keywords = ["security", "monitoring", "intrusion-detection", "network", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
monix = "cli.main:main"
monix-web = "cli.main:monix_web_main"

[project.urls]
Homepage = "https://github.com/dinexh/monix"
Documentation = "https://github.com/dinexh/monix#readme"
Repository = "https://github.com/dinexh/monix"
Issues = "https://github.com/dinexh/monix/issues"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "shared*", "utils*", "dashboard*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
